src/tui/app/src/bottom_pane/snapshots/adam_tui__bottom_pane__chat_composer__tests__image_placeholder_multiple.snap
---
source: src/harness/tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› [Image #1][Image #2]                                                                              "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  loading · 100% left                                                                               "
