src/tui/app/src/bottom_pane/snapshots/adam_tui__bottom_pane__chat_composer__tests__image_placeholder_single.snap
---
source: src/tui/app/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                           .----.   "
"                                                                                          ( @  @ )  "
"                                                                                          (______)  "
"                                                                                         /\/\/\/\\  "
"                                                                                            Echo    "
"› [Image #1]                                                                                        "
"                                                                                                    "
"  loading · 100% left                                                                               "
