src/tui/app/src/bottom_pane/snapshots/adam_tui__bottom_pane__chat_composer__tests__multiple_pastes.snap
---
source: src/tui/app/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                           .----.   "
"                                                                                          ( @  @ )  "
"                                                                                          (______)  "
"                                                                                         /\/\/\/\\  "
"                                                                                            Echo    "
"                                                                                                    "
"› [Pasted Content 1003 chars][Pasted Content 1007 chars] another short paste                        "
"                                                                                                    "
"  loading · 100% left                                                                               "
