src/tui/app/src/bottom_pane/snapshots/adam_tui__bottom_pane__chat_composer__tests__zellij_empty_composer.snap
---
source: src/tui/app/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                           .----.   "
"                                                                                          ( @  @ )  "
"                                                                                          (______)  "
"                                                                                          /\/\/\/\\ "
"                                                                                            Echo    "
"› Ask Adam to do anything                                                                           "
"                                                                                                    "
"  loading · 100% left                                                                               "
